--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,20 +15,26 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <img src="images/bg-pattern-top.svg" alt="">
+  <div class="card-box">
+    <img class="pattern-card" src="images/bg-pattern-card.svg" alt="">
+    <img class="image-card" src="images/image-victor.jpg" alt="">
+    Victor Crest
+    26
+    London
+    <hr>
+    80K
+    Followers
 
-  80K
-  Followers
+    803K
+    Likes
 
-  803K
-  Likes
-
-  1.4K
-  Photos
+    1.4K
+    Photos
+  </div>
+  <img src="images/bg-pattern-bottom.svg" alt="">
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
