--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <img src="images/bg-pattern-top.svg" alt="">
   <div class="card-box">
-    <img class="pattern-card" src="images/bg-pattern-card.svg" alt="">
-    <img class="image-card" src="images/image-victor.jpg" alt="">
-    Victor Crest
-    26
-    London
+    <img id="card-pattern"src="images/bg-pattern-card.svg" alt="">
+    <img id="card-profile"src="images/image-victor.jpg" alt="">
     <hr>
-    80K
-    Followers
-
-    803K
-    Likes
-
-    1.4K
-    Photos
+    <h1>Victor Crest</h1>
+    <h2>26</h2>
+    <h3>London</h3>
+    <hr>
+    <table class="media-info">
+      <tr>
+        <td><h1>80K</h1></td>
+        <td><h1>803K</h1></td>
+        <td><h1>1.4K</h1></td>
+      </tr>
+      <tr>
+        <td><h4>Followers</h4></td>
+        <td><h4>Likes</h4></td>
+        <td><h4>Photos</h4></td>
+      </tr>
+    </table>
   </div>
-  <img src="images/bg-pattern-bottom.svg" alt="">
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Lucas Laino</a>.
   </div>
 </body>
 </html>
