Card almost finished
Still not satisfied with the card but advanced enough to start adding the other patterns

--- a/index.html
+++ b/index.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Profile card component</title>
 
 </head>
+
 <body>
   <div class="card-box">
-    <img id="card-pattern"src="images/bg-pattern-card.svg" alt="">
-    <img id="card-profile"src="images/image-victor.jpg" alt="">
-    <hr>
+    <img id="card-pattern" src="images/bg-pattern-card.svg" alt="">
+    <img id="card-profile" src="images/image-victor.jpg" alt="">
+    <hr class="no-need">
     <h1>Victor Crest</h1>
     <h2>26</h2>
     <h3>London</h3>
     <hr>
     <table class="media-info">
       <tr>
-        <td><h1>80K</h1></td>
-        <td><h1>803K</h1></td>
-        <td><h1>1.4K</h1></td>
+        <td>
+          <h1>80K</h1>
+        </td>
+        <td>
+          <h1>803K</h1>
+        </td>
+        <td>
+          <h1>1.4K</h1>
+        </td>
       </tr>
       <tr>
-        <td><h4>Followers</h4></td>
-        <td><h4>Likes</h4></td>
-        <td><h4>Photos</h4></td>
+        <td>
+          <h4>Followers</h4>
+        </td>
+        <td>
+          <h4>Likes</h4>
+        </td>
+        <td>
+          <h4>Photos</h4>
+        </td>
       </tr>
     </table>
   </div>
@@ -36,4 +52,5 @@
     Coded by <a href="#">Lucas Laino</a>.
   </div>
 </body>
+
 </html>
