--- a/index.html
+++ b/index.html
@@ -14,38 +14,42 @@
 </head>
 
 <body>
-  <div class="card-box">
-    <img id="card-pattern" src="images/bg-pattern-card.svg" alt="">
-    <img id="card-profile" src="images/image-victor.jpg" alt="">
-    <hr class="no-need">
-    <h1>Victor Crest</h1>
-    <h2>26</h2>
-    <h3>London</h3>
-    <hr>
-    <table class="media-info">
-      <tr>
-        <td>
-          <h1>80K</h1>
-        </td>
-        <td>
-          <h1>803K</h1>
-        </td>
-        <td>
-          <h1>1.4K</h1>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <h4>Followers</h4>
-        </td>
-        <td>
-          <h4>Likes</h4>
-        </td>
-        <td>
-          <h4>Photos</h4>
-        </td>
-      </tr>
-    </table>
+  <div class="container">
+    <img class="top-pattern" src="images/bg-pattern-top.svg" alt="">
+    <div class="card-box">
+      <img id="card-pattern" src="images/bg-pattern-card.svg" alt="">
+      <img id="card-profile" src="images/image-victor.jpg" alt="">
+      <hr class="no-need">
+      <h1>Victor Crest</h1>
+      <h2>26</h2>
+      <h3>London</h3>
+      <hr>
+      <table class="media-info">
+        <tr>
+          <td>
+            <h1>80K</h1>
+          </td>
+          <td>
+            <h1>803K</h1>
+          </td>
+          <td>
+            <h1>1.4K</h1>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h4>Followers</h4>
+          </td>
+          <td>
+            <h4>Likes</h4>
+          </td>
+          <td>
+            <h4>Photos</h4>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <img class="bottom-pattern" src="images/bg-pattern-bottom.svg" alt="">
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
