--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Lucas Laino</a>.
+    Coded by <a href="https://www.linkedin.com/in/lucas-laino/">Lucas Laino</a>.
   </div>
 </body>
 
